Added and updated.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,26 +15,22 @@ classifiers =
     Topic :: Software Development :: Build Tools
 
 [options]
-packages = find:
+py_modules =
+    makepkgbuild
+    archcraftpkg
 package_dir =
     = src
-py_modules = makepkgbuild
 include_package_data = true
 install_requires =
 
 [options.entry_points]
 console_scripts =
     makepkgbuild = makepkgbuild:main
+    apkg = archcraftpkg:main
 
 [options.package_data]
 * =
     docs/archcraft-pkg.7
-    docs/Archcraft-pkg.pdf
-
-[options.data_files]
-share/man/man7 =
-    docs/archcraft-pkg.7
-share/doc/archcraft-pkg =
     docs/Archcraft-pkg.pdf
 
 [tool.setuptools]
